# stratus

./: .gitignore  Cargo.toml  LICENSE  README.md
audio/: Cargo.toml
audio/src/: hls_source.rs  lib.rs  mp3.rs
backend/: Cargo.toml
backend/audio/: Cargo.toml
backend/audio/src/: hls_source.rs  lib.rs  mp3.rs
backend/src/: main.rs  sc.rs
backend/src/ui/: app.rs  cache.rs  controls.rs  main_page.rs  mod.rs  playlist_page.rs  song.rs  song_list.rs  style.rs  user_page.rs
backend/src/ui/app/: downloader.rs
src/: cache.rs  downloader.rs  main.rs  model.rs  sc.rs  ui_egui.rs
src/ui/: app.rs  controls.rs  playlist_page.rs  song.rs  song_list.rs  user_page.rs
src/ui/app/: downloader.rs
src/ui_iced/: app.rs  controls.rs  mod.rs  navigation.rs  playlist_page.rs  song.rs  song_list.rs  user_page.rs
