[package]
name = "stratus"
version = "0.1.0"
authors = ["Emily Hudson <gh@emily.mozmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
json = "0.12"
toml = "0.5"
eyre = "0.6"
scopeguard = "1.1"
lazy_static = "1.4"
derive_more = "0.99"
futures = "0.3"
iced = { git = "https://github.com/iced-rs/iced", features = ["tokio", "image", "advanced", "lazy"] }
log = "0.4"
fern = "0.6"
image = "0.23"
static_assertions = "1.1"
audio = { path = "./audio" }
async-trait = "0.1"
parking_lot = "0.11"
fuzzy-matcher = "*"
backoff = { version = "0.3", features = ["tokio"] }
ellipse = "0.2"
console-subscriber = "*"
arc-swap = "1.6"
poll-promise = "0.2"
eframe = "0.22"
regex = { version = "1.8", features = ["unicode-case"] }
hashbrown = "0.12"
once_cell = { version = "1.18", features = ["parking_lot"] }

[profile.release]
debug = true
strip = true
opt-level = 3
