[package]
name = "backend"
version = "0.1.0"
authors = ["Emily Hudson <emily33901@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soundcloud = "0.4"
tokio-util = { version = "~0.6.0", features = ["compat"] }
futures = "0.3"
