[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
async-trait = "0.1.50"
eyre = "0.6.5"
m3u8-rs = "2.0.0"
minimp3 = "0.5.1"
rodio = "0.14.0"
log = "0.4.14"
